docs: fix metadata destructure in query.graph

--- a/www/apps/book/app/learn/customization/customize-admin/route/page.mdx
+++ b/www/apps/book/app/learn/customization/customize-admin/route/page.mdx
@@ -43,7 +43,7 @@ export const GET = async (
   
   const { 
     data: brands, 
-    metadata: { count, take, skip },
+    metadata: { count, take, skip } = {},
   } = await query.graph({
     entity: "brand",
     ...req.queryConfig,
