--- a/www/apps/resources/app/integrations/guides/sanity/page.mdx
+++ b/www/apps/resources/app/integrations/guides/sanity/page.mdx
@@ -711,7 +711,7 @@ export const syncStep = createStep(
     while (hasMore) {
       const {
         data: products,
-        metadata: { count },
+        metadata: { count } = {},
       } = await query.graph({
         entity: "product",
         fields: [
