feat: create and edit flows update

--- a/packages/admin/dashboard/src/i18n/translations/en.json
+++ b/packages/admin/dashboard/src/i18n/translations/en.json
@@ -1519,6 +1519,11 @@
       "action": "Connect sales channels",
       "successToast": "Sales channels were successfully updated."
     },
+    "pickupOptions": {
+      "edit": {
+        "header": "Edit Pickup Option"
+      }
+    },
     "shippingOptions": {
       "create": {
         "shipping": {
@@ -1526,6 +1531,12 @@
           "hint": "Create a new shipping option to define how products are shipped from this location.",
           "label": "Shipping options",
           "successToast": "Shipping option {{name}} was successfully created."
+        },
+        "pickup": {
+          "header": "Create Pickup Option for {{zone}}",
+          "hint": "Create a new pickup option to define how products are picked up from this location.",
+          "label": "Pickup options",
+          "successToast": "Pickup option {{name}} was successfully created."
         },
         "returns": {
           "header": "Create a Return Option for {{zone}}",
@@ -1590,6 +1601,8 @@
         "count": {
           "shipping_one": "{{count}} shipping option",
           "shipping_other": "{{count}} shipping options",
+          "pickup_one": "{{count}} pickup option",
+          "pickup_other": "{{count}} pickup options",
           "returns_one": "{{count}} return option",
           "returns_other": "{{count}} return options"
         },
