--- a/packages/admin/dashboard/src/i18n/translations/$schema.json
+++ b/packages/admin/dashboard/src/i18n/translations/$schema.json
@@ -5750,6 +5750,23 @@
           ],
           "additionalProperties": false
         },
+        "pickupOptions": {
+          "type": "object",
+          "properties": {
+            "edit": {
+              "type": "object",
+              "properties": {
+                "header": {
+                  "type": "string"
+                }
+              },
+              "required": ["header"],
+              "additionalProperties": false
+            }
+          },
+          "required": ["edit"],
+          "additionalProperties": false
+        },
         "shippingOptions": {
           "type": "object",
           "properties": {
@@ -5757,6 +5774,25 @@
               "type": "object",
               "properties": {
                 "shipping": {
+                  "type": "object",
+                  "properties": {
+                    "header": {
+                      "type": "string"
+                    },
+                    "hint": {
+                      "type": "string"
+                    },
+                    "label": {
+                      "type": "string"
+                    },
+                    "successToast": {
+                      "type": "string"
+                    }
+                  },
+                  "required": ["header", "hint", "label", "successToast"],
+                  "additionalProperties": false
+                },
+                "pickup": {
                   "type": "object",
                   "properties": {
                     "header": {
@@ -5811,7 +5847,7 @@
                   "type": "string"
                 }
               },
-              "required": ["shipping", "returns", "tabs", "action"],
+              "required": ["shipping", "pickup", "returns", "tabs", "action"],
               "additionalProperties": false
             },
             "delete": {
@@ -5992,6 +6028,12 @@
                     "shipping_other": {
                       "type": "string"
                     },
+                    "pickup_one": {
+                      "type": "string"
+                    },
+                    "pickup_other": {
+                      "type": "string"
+                    },
                     "returns_one": {
                       "type": "string"
                     },
@@ -6002,6 +6044,8 @@
                   "required": [
                     "shipping_one",
                     "shipping_other",
+                    "pickup_one",
+                    "pickup_other",
                     "returns_one",
                     "returns_other"
                   ],
@@ -6197,6 +6241,7 @@
         "fulfillmentSets",
         "sidebar",
         "salesChannels",
+        "pickupOptions",
         "shippingOptions",
         "serviceZones"
       ],
