--- a/www/apps/resources/app/commerce-modules/payment/account-holder/page.mdx
+++ b/www/apps/resources/app/commerce-modules/payment/account-holder/page.mdx
@@ -6,6 +6,12 @@ export const metadata = {
 
 In this documentation, you'll learn about account holders, and how they're used to save payment methods in third-party payment providers.
 
+<Note>
+
+Account holders are available starting from Medusa `v2.5.0`.
+
+</Note>
+
 ## What's an Account Holder?
 
 An account holder represents a customer that can have saved payment methods in a third-party service. It's represented by the `AccountHolder` data model.
