--- a/www/apps/resources/references/notification/classes/notification.AbstractNotificationProviderService/page.mdx
+++ b/www/apps/resources/references/notification/classes/notification.AbstractNotificationProviderService/page.mdx
@@ -10,9 +10,18 @@ In this document, you’ll learn how to create a notification provider module an
 
 ---
 
-## 1. Create Module Directory
+## 1. Create Module Provider Directory
 
-Start by creating a new directory for your module. For example, `src/modules/my-notification`.
+Start by creating a new directory for your module provider.
+
+If you're creating the module provider in a Medusa application, create it under the `src/modules` directory. For example, `src/modules/my-notification`.
+If you're creating the module provider in a plugin, create it under the `src/providers` directory. For example, `src/providers/my-notification`.
+
+<Note>
+
+The rest of this guide always uses the `src/modules/my-notification` directory as an example.
+
+</Note>
 
 ---
 
@@ -192,6 +201,7 @@ module.exports = defineConfig({
             },
           },
           {
+            // if module provider is in a plugin, use `plugin-name/providers/my-notification`
             resolve: "./src/modules/my-notification",
             id: "my-notification",
             options: {
