add missing title

--- a/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
@@ -308,7 +308,7 @@ import BlogType from "@myorg/plugin-name/types/blog"
 
 And you can register a module provider in the Medusa application's `medusa-config.ts` like this:
 
-```ts highlights={[["9"]]}
+```ts highlights={[["9"]]} title="medusa-config.ts"
 module.exports = defineConfig({
   // ...
   modules: [
