fix: typo in installation page.mdx

--- a/www/apps/book/app/learn/installation/page.mdx
+++ b/www/apps/book/app/learn/installation/page.mdx
@@ -118,7 +118,7 @@ This directory is the central place for your custom development. It includes the
 - `admin`: Holds your admin dashboard's custom [widgets](../fundamentals/admin/widgets/page.mdx) and [UI routes](../fundamentals/admin/ui-routes/page.mdx).
 - `api`: Holds your custom [API routes](../fundamentals/api-routes/page.mdx) that are added as endpoints in your Medusa application.
 - `jobs`: Holds your [scheduled jobs](../fundamentals/scheduled-jobs/page.mdx) that run at a specified interval during your Medusa application's runtime.
-- `links`: Holds you [module links](../fundamentals/module-links/page.mdx) that build associations between data models of different modules.
+- `links`: Holds your [module links](../fundamentals/module-links/page.mdx) that build associations between data models of different modules.
 - `modules`: Holds your custom [modules](../fundamentals/modules/page.mdx) that implement custom business logic.
 - `scripts`: Holds your custom [scripts](../fundamentals/custom-cli-scripts/page.mdx) to be executed using Medusa's CLI tool.
 - `subscribers`: Holds your [event listeners](../fundamentals/events-and-subscribers/page.mdx) that are executed asynchronously whenever an event is emitted.
