--- a/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
@@ -270,7 +270,7 @@ Your plugin project should have the following exports in `package.json`:
   "exports": {
     "./package.json": "./package.json",
     "./workflows": "./.medusa/server/src/workflows/index.js",
-    "./modules/*": "./.medusa/server/src/modules/*/index.js",
+    "./.medusa/server/src/modules/*": "./.medusa/server/src/modules/*/index.js",
     "./providers/*": "./.medusa/server/src/providers/*/index.js",
     "./*": "./.medusa/server/src/*.js"
   }
@@ -287,7 +287,7 @@ The plugin exports the following files and directories:
 
 - `./package.json`: The package.json file. Medusa needs to access the `package.json` when registering the plugin.
 - `./workflows`: The workflows exported in `./src/workflows/index.ts`.
-- `./modules/*`: The definition file of modules. This is useful if you create links to the plugin's modules in the Medusa application.
+- `./.medusa/server/src/modules/*`: The definition file of modules. This is useful if you create links to the plugin's modules in the Medusa application.
 - `./providers/*`: The definition file of module providers. This allows you to register the plugin's providers in the Medusa application.
 - `./*`: Any other files in the plugin's `src` directory.
 
