--- a/www/apps/book/app/learn/fundamentals/environment-variables/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/environment-variables/page.mdx
@@ -24,7 +24,7 @@ During development, it's easier to set environment variables in a `.env` file in
 
 Based on your `NODE_ENV` system environment variable, Medusa will try to load environment variables from the following `.env` files:
 
-<Note title="Tip>
+<Note title="Tip">
 
 As of [Medusa v2.5.0](https://github.com/medusajs/medusa/releases/tag/v2.5.0), `NODE_ENV` defaults to `production` when using `medusa start`. Otherwise, it defaults to `development`.
 
