--- a/www/apps/resources/references/payment_models/variables/payment_models.AccountHolder/page.mdx
+++ b/www/apps/resources/references/payment_models/variables/payment_models.AccountHolder/page.mdx
@@ -10,4 +10,4 @@ import { TypeList } from "docs-ui"
 
 This documentation provides a reference to the AccountHolder data model. It belongs to the Payment Module.
 
-<TypeList types={[{"name":"id","type":"PrimaryKeyModifier&#60;IdProperty&#62;","description":"","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"provider_id","type":"`TextProperty`","description":"","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"external_id","type":"`TextProperty`","description":"","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"data","type":"`JSONProperty`","description":"","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"email","type":"`TextProperty`","description":"","optional":true,"defaultValue":"","expandable":false,"children":[]},{"name":"metadata","type":"`JSONProperty`","description":"","optional":true,"defaultValue":"","expandable":false,"children":[]}]} expandUrl="https://docs.medusajs.com/learn/fundamentals/data-models/manage-relationships#retrieve-records-of-relation" sectionTitle="AccountHolder"/>
+<TypeList types={[{"name":"id","type":"PrimaryKeyModifier&#60;IdProperty&#62;","description":"The ID of the account holder.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"provider_id","type":"`TextProperty`","description":"The ID of the payment provider storing the account holder's saved payment methods.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"external_id","type":"`TextProperty`","description":"The ID of the account holder in the payment provider's system.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"data","type":"`JSONProperty`","description":"The data returned by the payment provider when the account holder is created.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"email","type":"`TextProperty`","description":"The email of the account holder","optional":true,"defaultValue":"","expandable":false,"children":[]},{"name":"metadata","type":"`JSONProperty`","description":"Holds custom data in key-value pairs.","optional":true,"defaultValue":"","expandable":false,"children":[]}]} expandUrl="https://docs.medusajs.com/learn/fundamentals/data-models/manage-relationships#retrieve-records-of-relation" sectionTitle="AccountHolder"/>
