--- a/www/apps/resources/app/commerce-modules/product/links-to-other-modules/page.mdx
+++ b/www/apps/resources/app/commerce-modules/product/links-to-other-modules/page.mdx
@@ -19,6 +19,7 @@ Read-only links are used to query data across modules, but the relations aren't 
 </Note>
 
 - [`Product` data model \<\> `Cart` data model of Cart Module](#cart-module). (Read-only).
+- [`Product` data model \<\> `ShippingProfile` data model of Fulfillment Module](#fulfillment-module).
 - [`ProductVariant` data model \<\> `InventoryItem` data model of Inventory Module](#inventory-module).
 - [`Product` data model \<\> `Order` data model of Order Module](#order-module). (Read-only).
 - [`ProductVariant` data model \<\> `PriceSet` data model of Pricing Module](#pricing-module).
@@ -73,6 +74,101 @@ const { data: variants } = useQueryGraphStep({
 })
 
 // variants.line_items
+```
+
+  </CodeTab>
+</CodeTabs>
+
+---
+
+## Fulfillment Module
+
+Medusa defines a link between the `Product` data model and the `ShippingProfile` data model of the Fulfillment Module. Each product must belong to a shipping profile.
+
+<Note>
+
+This link is introduced in [Medusa v2.5.0](https://github.com/medusajs/medusa/releases/tag/v2.5.0).
+
+</Note>
+
+### Retrieve with Query
+
+To retrieve the shipping profile of a product with [Query](!docs!/learn/fundamentals/module-links/query), pass `shipping_profile.*` in `fields`:
+
+<CodeTabs group="relation-query">
+  <CodeTab label="query.graph" value="method">
+
+```ts
+const { data: products } = await query.graph({
+  entity: "product",
+  fields: [
+    "shipping_profile.*",
+  ],
+})
+
+// products.shipping_profile
+```
+
+  </CodeTab>
+  <CodeTab label="useQueryGraphStep" value="step">
+
+```ts
+import { useQueryGraphStep } from "@medusajs/medusa/core-flows"
+
+// ...
+
+const { data: products } = useQueryGraphStep({
+  entity: "product",
+  fields: [
+    "shipping_profile.*",
+  ],
+})
+
+// products.shipping_profile
+```
+
+  </CodeTab>
+</CodeTabs>
+
+### Manage with Link
+
+To manage the shipping profile of a product, use [Link](!docs!/learn/fundamentals/module-links/link):
+
+<CodeTabs group="relation-link">
+  <CodeTab label="link.create" value="method">
+
+```ts
+import { Modules } from "@medusajs/framework/utils"
+
+// ...
+
+await link.create({
+  [Modules.PRODUCT]: {
+    product_id: "prod_123",
+  },
+  [Modules.FULFILLMENT]: {
+    shipping_profile_id: "sp_123",
+  },
+})
+```
+
+  </CodeTab>
+  <CodeTab label="createRemoteLinkStep" value="step">
+
+```ts
+import { Modules } from "@medusajs/framework/utils"
+import { createRemoteLinkStep } from "@medusajs/medusa/core-flows"
+
+// ...
+
+createRemoteLinkStep({
+  [Modules.PRODUCT]: {
+    product_id: "prod_123",
+  },
+  [Modules.FULFILLMENT]: {
+    shipping_profile_id: "sp_123",
+  },
+})
 ```
 
   </CodeTab>
